Fcc 128/groups menu (#38)
* [FCC-128] - Groups admin page

* [FCC-128] - Add filters to users

* [FCC-216] - Add name to Groups

* [FCC-189] - Adjust groups table to use uuid

* [FCC-128] - Add before_action to groups controller
