# app/serializers/group_serializer.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+class GroupSerializer < ActiveModel::Serializer
+  attributes :id, :category, :name
+
+  belongs_to :branch
+end
